small fix to embed iframes on mobile

--- a/view/theme/vier/mobile.css
+++ b/view/theme/vier/mobile.css
@@ -103,6 +103,10 @@ nav ul {
   .children .wall-item-container .wall-item-item .wall-item-content img {
     max-width: 100%;
   }
+  iframe.embed_rich { width: 100% !important }
+    /* TODO: check if this is needed.
+   * oembedded iframe usually have "width" and "height" as attributes
+   * that override this rule */
   iframe {
     max-width: 100%;
   }
